FIND_PACKAGE(Qt4 REQUIRED)

SET(qtsln_SOURCES
	qtcolorpicker/qtcolorpicker.cpp
	)

SET(qtsln_HEADERS
	qtcolorpicker/qtcolorpicker.h
	)

#SET(QT_USE_QTOPENGL true)
QT4_WRAP_CPP(qtsln_MOC ${qtsln_HEADERS})
#QT4_ADD_RESOURCES(qtsln_RESOURCES_RCC ${qtsln_RESOURCES})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_STATIC)
ADD_DEFINITIONS(-DSTATIC)

add_library (qtsln STATIC ${qtsln_MOC} ${qtsln_RESOURCES_RCC} ${qtsln_SOURCES})
