FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
set(CMAKE_AUTOMOC ON)

SET(qtsln_SOURCES
	qtcolorpicker/qtcolorpicker.cpp
	)

SET(qtsln_HEADERS
	qtcolorpicker/qtcolorpicker.h
	)

#QT5_WRAP_CPP(qtsln_MOC ${qtsln_HEADERS})
#QT4_ADD_RESOURCES(qtsln_RESOURCES_RCC ${qtsln_RESOURCES})
INCLUDE_DIRECTORIES(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_STATIC)
ADD_DEFINITIONS(-DQT_NO_PRINTER)
ADD_DEFINITIONS(-DSTATIC)

add_library (qtsln STATIC ${qtsln_SOURCES})
set_target_properties(qtsln PROPERTIES AUTOMOC TRUE)
qt5_use_modules(qtsln Widgets Gui Core)
